# ruff-vscode

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .vscode-test.js  .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  justfile  mypy.ini  noxfile.py  package-lock.json  package.json  pyproject.toml  release.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tsconfig.json  webpack.config.js
.github/: ISSUE_TEMPLATE.md  renovate.json5
.github/workflows/: ci.yaml  format.yml  release.yaml  zizmor.yaml
bundled/tool/: _debug_server.py  find_ruff_binary_path.py  jsonrpc.py  ruff_server.py  runner.py  server.py  utils.py
scripts/: bump_extension_version.sh  bump_lsp_version.sh  bump_ruff_version.sh  release.py
src/: extension.ts
src/common/: commands.ts  constants.ts  logger.ts  python.ts  server.ts  settings.ts  setup.ts  status.ts  uriTranslator.ts  utilities.ts  version.ts  vfsSupport.ts  vscodeapi.ts
src/common/log/: fileLogger.ts  logging.ts  outputChannelLogger.ts  types.ts
src/test/: diagnostics.test.ts  e2e.test.ts  formatting.test.ts  helper.ts  utils.test.ts  vfs.e2e.test.ts
src/test/python_tests/: requirements.in  requirements.txt  test_server.py
src/test/python_tests/lsp_test_client/: constants.py  defaults.py  session.py  utils.py
src/test/testVfsExtension/: package.json
src/test/testVfsExtension/src/: extension.ts
src/testFixture/: diagnostics.py  formatting.py  pyproject.toml
tests/: test_server.py
tests/client/: constants.py  defaults.py  package_json.py  session.py
