[project]
name = "ruff-vscode"
version = "2025.24.0"
requires-python = ">=3.7"
dependencies = ["packaging>=23.1", "ruff-lsp==0.0.62", "ruff==0.12.0"]

[project.optional-dependencies]
dev = ["mypy==1.2.0", "python-lsp-jsonrpc==1.0.0"]

[tool.ruff]
line-length = 88
target-version = "py37"
extend-exclude = ["bundled/libs", "src/testFixture"]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "UP", "I", "N"]

[tool.mypy]
files = ["bundled/tool", "build", "tests"]
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["debugpy.*", "lsprotocol.*", "pygls.*", "pylsp_jsonrpc.*"]
ignore_missing_imports = true
